--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   dio: ^5.4.3+1
   flutter_secure_storage: ^9.2.2
+  intl: ^0.17.0 # Add the intl package with the latest version
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
